# cv-mcp

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  README.md  ROADMAP.md  TODO.md  fly.toml  pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-web.yml
content/: work.md
experiments/workers-feasibility/: REPORT.md  pyproject.toml  wrangler.jsonc
experiments/workers-feasibility/src/: entry.py
frontend/: CNAME  chat.js  index.html  style.css
scripts/: dev.sh
src/cv_mcp/: __init__.py  api.py  content.py  prompts.py  providers.py  server.py
tests/: test_api.py  test_content.py
web/: index.html  package-lock.json  package.json  wrangler.jsonc
web/src/: app.tsx  server.ts
workers/: .gitignore  README.md  pyproject.toml  wrangler.jsonc
workers/src/: content.py  entry.py
workers/src/content/: experience.md  narrative.md  profile.md  tech.md  work.md
